--- a/UI/TransactionsList/TableViewCell.xib
+++ b/UI/TransactionsList/TableViewCell.xib
@@ -7,11 +7,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TableViewCell" customModule="Transaction_List" customModuleProvider="target">
-            <connections>
-                <outlet property="transactionDescription" destination="EOP-oQ-Fy6" id="Occ-0R-sAK"/>
-            </connections>
-        </placeholder>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TableViewCell" customModule="Transaction_List" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TableViewCell" id="KGk-i7-Jjw" customClass="TableViewCell" customModule="Transaction_List" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -33,6 +29,9 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="transactionDescription" destination="EOP-oQ-Fy6" id="mTY-8j-11a"/>
+            </connections>
             <point key="canvasLocation" x="132" y="153"/>
         </tableViewCell>
     </objects>
