--- a/UI/TransactionsList/TableViewCell.xib
+++ b/UI/TransactionsList/TableViewCell.xib
@@ -9,58 +9,60 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TableViewCell" customModule="Transaction_List" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TableViewCell" id="KGk-i7-Jjw" customClass="TableViewCell" customModule="Transaction_List" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TableViewCell" rowHeight="64" id="KGk-i7-Jjw" customClass="TableViewCell" customModule="Transaction_List" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="64"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="64"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EOP-oQ-Fy6">
-                        <rect key="frame" x="56" y="4" width="88" height="24"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ftM-s8-m6l">
+                        <rect key="frame" x="16" y="16" width="32" height="32"/>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OZd-h9-Hyp">
+                        <rect key="frame" x="64" y="16" width="88" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ftM-s8-m6l">
-                        <rect key="frame" x="16" y="10" width="24" height="24"/>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zIC-1M-h1o">
-                        <rect key="frame" x="56" y="23" width="53" height="15"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UbS-MD-Q8X">
+                        <rect key="frame" x="64" y="41" width="52" height="15"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sFi-ps-HxK">
-                        <rect key="frame" x="246" y="10" width="42" height="24"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NCV-Cb-jT4">
+                        <rect key="frame" x="249" y="22" width="39" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="sFi-ps-HxK" secondAttribute="bottom" constant="10" id="6y1-61-z0y"/>
-                    <constraint firstItem="sFi-ps-HxK" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="97d-JP-C93"/>
-                    <constraint firstItem="EOP-oQ-Fy6" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="4" id="IaC-m6-5TE"/>
-                    <constraint firstItem="EOP-oQ-Fy6" firstAttribute="leading" secondItem="ftM-s8-m6l" secondAttribute="trailing" constant="16" id="JhP-J2-f71"/>
-                    <constraint firstAttribute="bottom" secondItem="EOP-oQ-Fy6" secondAttribute="bottom" constant="16" id="LRt-EM-NGE"/>
-                    <constraint firstItem="ftM-s8-m6l" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="NYg-OG-NIF"/>
-                    <constraint firstItem="zIC-1M-h1o" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="23" id="byK-bF-1cj"/>
-                    <constraint firstAttribute="bottom" secondItem="zIC-1M-h1o" secondAttribute="bottom" constant="6" id="d1A-No-NHf"/>
-                    <constraint firstAttribute="trailing" secondItem="EOP-oQ-Fy6" secondAttribute="trailing" constant="176" id="i1e-16-O59"/>
-                    <constraint firstAttribute="trailing" secondItem="zIC-1M-h1o" secondAttribute="trailing" constant="211" id="ivV-JM-r8g"/>
-                    <constraint firstAttribute="bottom" secondItem="ftM-s8-m6l" secondAttribute="bottom" constant="10" id="kPH-o0-OV8"/>
-                    <constraint firstItem="sFi-ps-HxK" firstAttribute="leading" secondItem="EOP-oQ-Fy6" secondAttribute="trailing" constant="102" id="kjt-F3-QpQ"/>
-                    <constraint firstItem="ftM-s8-m6l" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="oms-Xc-OUy"/>
-                    <constraint firstItem="zIC-1M-h1o" firstAttribute="leading" secondItem="ftM-s8-m6l" secondAttribute="trailing" constant="16" id="utf-Tb-ZEp"/>
-                    <constraint firstAttribute="trailing" secondItem="sFi-ps-HxK" secondAttribute="trailing" constant="32" id="wNn-hR-Dwi"/>
+                    <constraint firstItem="ftM-s8-m6l" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="0DM-qd-eNh"/>
+                    <constraint firstItem="ftM-s8-m6l" firstAttribute="height" secondItem="H2p-sc-9uM" secondAttribute="height" multiplier="0.5" id="2Fk-Uo-I6f"/>
+                    <constraint firstAttribute="bottom" secondItem="ftM-s8-m6l" secondAttribute="bottom" constant="16" id="9Cg-EC-9ez"/>
+                    <constraint firstItem="NCV-Cb-jT4" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="22" id="A86-ea-Nkd"/>
+                    <constraint firstItem="OZd-h9-Hyp" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="F5i-Bt-vkc"/>
+                    <constraint firstItem="OZd-h9-Hyp" firstAttribute="leading" secondItem="ftM-s8-m6l" secondAttribute="trailing" constant="16" id="GsL-T1-Z8z"/>
+                    <constraint firstItem="ftM-s8-m6l" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="LgV-km-iOZ"/>
+                    <constraint firstAttribute="bottom" secondItem="OZd-h9-Hyp" secondAttribute="bottom" constant="27" id="TGn-9s-xHS"/>
+                    <constraint firstItem="UbS-MD-Q8X" firstAttribute="top" secondItem="OZd-h9-Hyp" secondAttribute="bottom" constant="4" id="bJX-xn-MaU"/>
+                    <constraint firstAttribute="bottom" secondItem="UbS-MD-Q8X" secondAttribute="bottom" constant="8" id="e8q-gq-6YP"/>
+                    <constraint firstItem="ftM-s8-m6l" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="0.1" id="fGs-aR-0mA"/>
+                    <constraint firstAttribute="bottom" secondItem="NCV-Cb-jT4" secondAttribute="bottom" constant="21" id="qkz-th-wGO"/>
+                    <constraint firstAttribute="trailing" secondItem="NCV-Cb-jT4" secondAttribute="trailing" constant="32" id="rB2-ap-JDf"/>
+                    <constraint firstItem="UbS-MD-Q8X" firstAttribute="leading" secondItem="ftM-s8-m6l" secondAttribute="trailing" constant="16" id="vAB-Gv-rvb"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="transactionDescription" destination="EOP-oQ-Fy6" id="mTY-8j-11a"/>
+                <outlet property="bankIcon" destination="ftM-s8-m6l" id="BOb-aF-p5M"/>
+                <outlet property="transactionCategory" destination="UbS-MD-Q8X" id="6bw-eN-dDv"/>
+                <outlet property="transactionDescription" destination="OZd-h9-Hyp" id="pWa-JQ-IP2"/>
+                <outlet property="transactionPrice" destination="NCV-Cb-jT4" id="iOm-FV-16b"/>
             </connections>
-            <point key="canvasLocation" x="128.98550724637681" y="154.6875"/>
+            <point key="canvasLocation" x="128.98550724637681" y="161.38392857142856"/>
         </tableViewCell>
     </objects>
 </document>
